# my_pcl_tutorial

./: .gitignore  CMakeLists.txt  README.md  package.xml  room_scan2_transformed.pcd  test_velodyne.pcd
launch/: rwrc16_obstacle_map.launch  rwrc16_obstacle_map_after_crcl_for_ndt.launch  rwrc16_test_tf.launch  rwrc16_tom_laser_obs_map.launch  test_tf.launch
src/: Dgauss_score.cpp  NDT_score.cpp  create_obs_map_pcd.cpp  create_tom_laser_local_map.cpp  example.cpp  example1.cpp  example10.cpp  example11.cpp  example11_ver2.cpp  example11_with_tom_laser.cpp  example12.cpp  example12_fast_3d_ndt.cpp  example12_fast_3d_ndt_for_vis.cpp  example12_fast_ndt.cpp  example12_fast_ndt_ver2.cpp  example3.cpp  example4.cpp  example6.cpp  example7.cpp  example8.cpp  example9.cpp  example_area_calculation.cpp  example_clustering.cpp  example_extract_indices.cpp  example_fast_3d_ndt.cpp  example_fast_3d_ndt_jrm_ver2.cpp  example_fast_3d_ndt_kari.cpp  example_fast_3d_ndt_navio.cpp  example_fast_3d_ndt_sq1.cpp  example_fast_3d_ndt_sq1_ver2.cpp  example_fast_3d_ndt_sq1_ver3.cpp  example_fast_3d_ndt_ver2.cpp  example_fast_ndt.cpp  example_kdtree.cpp  example_ndt.cpp  example_pcd.cpp  example_plane_segmentation.cpp  example_plane_segmentation2.cpp  example_statistical_outlier_removal.cpp  example_voxel_grid.cpp  (+40 more)
